<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <include layout="@layout/toolbar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/primary">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_nav_logout"
        android:background="@drawable/square_touch_bg"
        style="@style/about_textview"/>

    <TextView
        android:id="@+id/exitapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_nav_exitapp"
        android:background="@drawable/square_touch_bg"
        style="@style/about_textview"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_about_version"
        android:background="@drawable/square_touch_bg"
        style="@style/about_textview"/>

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_about_bangumi"
        android:background="@drawable/square_touch_bg"
        style="@style/about_textview"/>
</LinearLayout>